# parc24

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
src/api/: cppo.h  lib.h  ptypes.h
src/api/cppo/: types.h
src/api/parc24/: aliastore.h  arith.h  ccmdstore.h  context.h  funcstore.h  io.h  ioslog.h  iosstack.h  options.h  pars.h  patterns.h  travast.h  var_store.h  wdstek.h
src/calp/api/calp/: ast.h  grammar.h  lexer.h  lexers.h  parser.h  ptypes.h
src/calp/api/calp/grammar/: build.h  define.h  fun.h
src/calp/api/calp/parser/: build.h  fun.h
src/calp/api/calp/util/: buffer.h
src/calp/main/calp/: ast.c  lexers.c
src/calp/main/calp/grammar/: build.c  fun.c  internals.h
src/calp/main/calp/parser/: build.c  internals.c  internals.h  parse.c
src/calp/main/calp/util/: buffer.c  log.h  math.h  null.h  string.c  string.h
src/exe/: exe.c  stub.c
src/main/: sayhi.c
src/main/builtins/: alia.c  ccmds.c  ccmds.h  ccmdstore.c  cd.c  ctrl.c  source.c
src/main/cppo/: err.c  exe.c  fdi.c  fdi.h  parallels.c  parallels.h  pipe.c  twrc.c  util.c  util.h
src/main/grammar/: aliaser.c  aliaser.h  arith.c  grammar.c  quotcapture.c  quotexpando.c  quotexpando.h
src/main/parc24/: stub.c
src/main/pat/: ctypew.c  pat.c  pat.h  pati.c  pati.h  patpars.c  patpars.h  patpars_ext.c
src/main/tihs/: exe.c  exe.h  opts.c  opts.h
src/main/uni/: unico.c
src/main/util/: argsarr_mut.c  argsarr_mut.h  buffer.c  buffer.h  buffer_printf.c  buffer_printf.h  bufferio.c  bufferio.h  caste.h  defio.c  fddio.c  fddio.h  flist.c  flist.h  null.h  str2i.c  str2i.h  string.h  thread.h  trie.c  trie.h
src/main/var/: aliastore.c  context.c  funcstore.c  ioslog.c  iostack.c  var_trie.c  varstore.c  wdstek.c
src/test/: catch2ext.hpp  ccmdstore.cpp  iostack.cpp  parc.cpp  patmat.cpp  sayhi.cpp  stub.cpp  var_store.cpp
src/test/cppo/: parallels.cpp  pipe.cpp  util.cpp
src/test/grammar/: aliaser.cpp  quotexpando.cpp
src/test/tihs/: opts.cpp
test/: asarg.bats  asinput-neg.bats  asinput.bats  ccmds.bats  common.sh  flowctrl.bats  redirs.bats  scripts.bats  simple.bats
